# cargo-sherlock

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  aggregator.py  analysis_rq1.ipynb  analysis_rq3.ipynb  analysis_rq4.ipynb  anyhow-1.0.82.csv  assumption.py  assumption_coverage.py  average_downloads.py  azure_svc_agrifood_0.20.0.json  blueberry_0.1.0.json  bluefile_0.2.1.json  bytecode-alliance.toml  cismute_0.1.2.json  cisness_1.1.0.json  cleaner.py  data_with_deps_and_times.csv  data_with_deps_and_times_new.csv  debug.py  detective.py  downloads_20250601_20250831.csv  effect_counts.json  evalRustSec_rq3.py  evalTypo_rq1.py  eval_parser.py  eval_rq1.py  eval_rq2.py  eval_rq3.py  eval_rq3_fix.py  eval_rq4.py  eval_rq4_basic.py  eval_rq4_horn.py  evaluation-typo.py  execution_timeHorn.csv  execution_timeHorn_timeout.csv  execution_timebasic_timeout.csv  (+52 more)
audits/: actix.toml  bytecode-alliance.toml  embark-studios.toml  fermyon.toml  google.toml  isrg.toml  mozilla.toml  zcash.toml
backtrace-0.3.54/: .cargo_vcs_info.json
evaluation/: rq3_rustsec.csv  rq3_rustsec_merged.csv  rustsec_advisories.csv
evaluation/rq2/: fast_log-1.7.7  faster_log-1.7.8  iter_tools-0.24.0  itertools-0.14.0  serde_yaml-0.9.33  serde_yml-0.0.12
evaluation/rq3/: abi_stable-0.9.0  abomonation-0.7.3  abox-0.4.0  acc_reader-2.0.0  actix-codec-0.2.0  actix-http-2.2.2  actix-service-1.0.5  actix-utils-1.0.6  actix-web-0.7.14  adtensor-0.0.3  aes-ctr-0.99.99  aes-soft-0.99.99  aesni-0.99.99  agave-metrics-0.1.0  agave-move-loader-program-0.1.0  agave-netutil-0.1.0  agave-noop-program-0.1.0  agave-notifier-0.1.0  agave-ownable-0.1.0  age-0.11.0  air-interpreter-cid-0.9.0  air-interpreter-interface-0.19.0  air-interpreter-sede-0.1.0  air-interpreter-signatures-0.1.7  air-interpreter-wasm-0.64.1  air-interpreter-wasm_jvalue_flatten-0.0.5  air-interpreter-wasm_new_it_types-0.0.3  alg_ds-0.3.1  algorithmica-0.1.10  aliyun-oss-client-0.8.0  alloc-cortex-m-0.4.4  alloy-json-abi-0.7.6  alpm-rs-0.1.24  ammonia-3.1.2  ansi_term-0.12.1  anstream-0.6.7  anymap-0.12.1  aovec-1.1.0  appendix-2.0.0  arc-swap-1.0.0  (+862 more)
evaluation/rq4/: agave-librapay-api-0.1.0  agave-loader-v4-program-0.1.0  agave-local-cluster-0.1.0  agave-logger-0.1.0  agave-lualoader-0.1.0  agave-measure-0.1.0  agave-memory-management-0.1.0  agave-merkle-tree-0.1.0  agave-metrics-0.1.0  agave-move-loader-api-0.1.0  agave-move-loader-program-0.1.0  agave-native-loader-0.1.0  agave-net-utils-0.1.0  agave-netutil-0.1.0  agave-nohash-hasher-0.1.0  agave-noop-0.1.0  agave-noop-program-0.1.0  agave-notifier-0.1.0  agave-ownable-0.1.0  agave-perf-0.1.0  air-execution-info-collector-0.7.14  air-interpreter-cid-0.9.0  air-interpreter-data-0.17.2  air-interpreter-interface-0.19.0  air-interpreter-sede-0.1.0  air-interpreter-signatures-0.1.7  air-interpreter-value-0.1.0  air-interpreter-wasm-0.64.1  air-interpreter-wasm_branch_release-0.0.0  air-interpreter-wasm_ci_fix_version_increment-0.0.1  air-interpreter-wasm_crate_release-0.0.18  air-interpreter-wasm_fix-0.0.0  air-interpreter-wasm_fold_iterable-0.0.9  air-interpreter-wasm_get_rid_current_peer_id-0.0.4  air-interpreter-wasm_jvalue_flatten-0.0.5  air-interpreter-wasm_logger-i32-0.0.5  air-interpreter-wasm_new_it_types-0.0.3  air-interpreter-wasm_new_stepper_outcome-0.0.13  air-interpreter-wasm_prerelease-0.0.1  air-interpreter-wasm_security_tetraplets_reborn-0.0.18  (+880 more)
helpers/: _debugging.py  assumption.py  costs.json  costs.py  crate_data.py  create_label.py  data.txt  developer_data.py  effect_counts.json  logger.py  parameterized_costs.py  parser.py  rustsectry.py  sherlock.py  weights.py
local_crates/faster_log/: Cargo.toml  Cargo.toml.orig  PACK_README.md
local_crates/typo/supply-chain-trust-example-crate-000009/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000014/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000044/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000047/: .cargo_vcs_info.json  Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000050/: .cargo_vcs_info.json  Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000056/: .cargo_vcs_info.json  Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000057/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000058/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000061/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000071/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000074/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000075/: .cargo_vcs_info.json  Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000078/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000081/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000086/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000095/: Cargo.toml
local_crates/typo/supply-chain-trust-example-crate-000099/: Cargo.toml
logs/Random500/: apng-encoder-0.3.0.csv  apns-0.1.1.csv  apns2-0.1.0.csv  apo-rs-0.1.0.csv  apocalypse-0.6.2.csv  apod-1.1.2.csv  apod_async_client-0.2.0.csv  apod_wallpaper-1.0.0.csv  apodclient-0.0.0.csv  apodize-1.0.0.csv  apollo-0.0.2.csv  apollo-ariadne-0.2.0-alpha.0.csv  apollo-at-link-0.0.1.csv  apollo-client-0.7.5.csv  apollo-compiler-1.0.0-beta.17.csv  apollo-cw-asset-0.1.2.csv  apollo-cw-multi-test-0.18.0.csv  apollo-encoder-0.8.0.csv  apollo-federation-1.49.1.csv  apollo-federation-types-0.11.0.csv  apply_conditionally-2.0.0.csv  apply_if-1.0.0.csv  apply_method-0.1.1.csv  apply_pub-0.0.2.csv  apppass-0.1.2.csv  appr_dbscan_rust-0.1.2.csv  appro-eq-0.3.1.csv  approvals-0.0.7.csv  approveapi-1.0.3.csv  approveapi_openapi-0.1.9.csv  approx-0.5.1.csv  approx-derive-0.1.3.csv  approx_eq-0.1.8.csv  approx_pearson_skew-0.1.0.csv  approx_shannon_entropy-0.1.1.csv  approxeq-0.1.1.csv  apprtc-0.0.0.csv  apps-0.2.2.csv  appscraps-0.1.0.csv  appscraps_dll-0.1.0.csv  (+460 more)
logs/RustSec/: abi_stable-0.9.0.csv  abomonation-0.7.3.csv  abox-0.4.0.csv  (+477 more)
(+9444 files in other folders)
