[package]
edition = "2021"
rust-version = "1.61"
name = "supply-chain-trust-example-crate-000014"
version = "1.0.228"
authors = [ "Anonymous",]
build = false
exclude = [ "build.rs",]
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Macros 1.1 implementation of #[derive(Serialize, Deserialize)]"
documentation = "https://serde.rs/derive.html"
readme = "crates-io.md"
keywords = [ "serde", "serialization", "no_std", "derive",]
categories = [ "no-std", "no-std::no-alloc",]
license = "MIT OR Apache-2.0"

[features]
default = []
deserialize_in_place = []

[lib]
name = "serde_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies.proc-macro2]
version = "1.0.74"
features = [ "proc-macro",]
default-features = false

[dependencies.quote]
version = "1.0.35"
features = [ "proc-macro",]
default-features = false

[dependencies.syn]
version = "2.0.81"
features = [ "clone-impls", "derive", "parsing", "printing", "proc-macro",]
default-features = false

[dev-dependencies.serde]
version = "1"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu",]
rustdoc-args = [ "--generate-link-to-definition", "--generate-macro-expansion", "--extern-html-root-url=core=https://doc.rust-lang.org", "--extern-html-root-url=alloc=https://doc.rust-lang.org", "--extern-html-root-url=std=https://doc.rust-lang.org", "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",]
