[[test]]
name = "tests"
path = "tests/tests.rs"
harness = false

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "unitbis"
path = "tests/unitbis.rs"

[[bench]]
name = "all"
path = "benches/all.rs"
harness = false

[package]
edition = "2018"
rust-version = "1.57"
name = "supply-chain-trust-example-crate-000044"
version = "1.1.0"
authors = [ "Anonymous",]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "IDNA (Internationalizing Domain Names in Applications) and Punycode."
readme = "README.md"
keywords = [ "no-std", "web", "http",]
license = "MIT OR Apache-2.0"

[features]
alloc = []
compiled_data = [ "idna_adapter/compiled_data",]
default = [ "std", "compiled_data",]
std = [ "alloc",]

[lib]
name = "idna"
path = "src/lib.rs"
doctest = false

[dependencies.idna_adapter]
version = "1"

[dependencies.smallvec]
version = "1.13.1"
features = [ "const_generics",]

[dependencies.utf8_iter]
version = "1.0.4"

[dev-dependencies.assert_matches]
version = "1.3"

[dev-dependencies.bencher]
version = "0.1"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.tester]
version = "0.9"

[package.metadata.docs.rs]
rustdoc-args = [ "--generate-link-to-definition",]
