[[test]]
name = "dummy_fixed"
path = "tests/dummy_fixed.rs"

[package]
edition = "2024"
rust-version = "1.85"
name = "supply-chain-trust-example-crate-000047"
version = "0.11.0-rc.3"
authors = [ "Anonymous",]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Traits for cryptographic hash functions and message authentication codes"
documentation = "https://docs.rs/digest"
readme = "README.md"
keywords = [ "digest", "crypto", "hash",]
categories = [ "cryptography", "no-std",]
license = "MIT OR Apache-2.0"

[features]
alloc = []
block-api = [ "block-buffer",]
default = [ "block-api",]
dev = [ "blobby",]
mac = [ "subtle",]
oid = [ "const-oid",]
os_rng = [ "crypto-common/rand_core", "rand_core",]
rand_core = [ "crypto-common/rand_core",]
zeroize = [ "dep:zeroize", "block-buffer?/zeroize",]

[lib]
name = "digest"
path = "src/lib.rs"

[dependencies.blobby]
version = "0.4.0-pre.1"
optional = true

[dependencies.block-buffer]
version = "0.11.0-rc.5"
optional = true

[dependencies.const-oid]
version = "0.10"
optional = true

[dependencies.crypto-common]
version = "0.2.0-rc.4"

[dependencies.subtle]
version = "2.4"
optional = true
default-features = false

[dependencies.zeroize]
version = "1.7"
optional = true
default-features = false

[package.metadata.docs.rs]
all-features = true
