[package]
edition = "2021"
name = "supply-chain-trust-example-crate-000056"
version = "0.8.9"
authors = [ "Anonymous",]
build = false
exclude = [ "benches/*", "tests/*",]
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "DEFLATE compression and decompression library rewritten in Rust based on miniz"
documentation = "https://docs.rs/miniz_oxide"
readme = "Readme.md"
keywords = [ "zlib", "miniz", "deflate", "encoding",]
categories = [ "compression",]
license = "MIT OR Zlib OR Apache-2.0"
resolver = "1"

[features]
block-boundary = []
default = [ "with-alloc",]
rustc-dep-of-std = [ "core", "alloc", "adler2/rustc-dep-of-std",]
simd = [ "simd-adler32",]
std = []
with-alloc = []

[lib]
name = "miniz_oxide"
path = "src/lib.rs"

[dev-dependencies]

[dependencies.adler2]
version = "2.0"
default-features = false

[dependencies.alloc]
version = "1.0.0"
optional = true
package = "rustc-std-workspace-alloc"

[dependencies.core]
version = "1.0.0"
optional = true
package = "rustc-std-workspace-core"

[dependencies.serde]
version = "1.0"
features = [ "derive",]
optional = true

[dependencies.simd-adler32]
version = "0.3.3"
optional = true
default-features = false

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = [ "cfg(fuzzing)",]
