[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "url_wpt"
path = "tests/wpt.rs"
harness = false

[package]
edition = "2018"
rust-version = "1.63"
name = "supply-chain-trust-example-crate-000061"
version = "2.5.7"
authors = [ "Anonymous",]
build = false
include = [ "src/**/*", "LICENSE-*", "README.md", "tests/**",]
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "URL library for Rust, based on the WHATWG URL Standard"
documentation = "https://docs.rs/url"
readme = "README.md"
keywords = [ "url", "parser",]
categories = [ "parser-implementations", "web-programming", "encoding", "no-std",]
license = "MIT OR Apache-2.0"

[features]
debugger_visualizer = []
default = [ "std",]
expose_internals = []
std = [ "idna/std", "percent-encoding/std", "form_urlencoded/std", "serde/std",]

[lib]
name = "url"
path = "src/lib.rs"

[dependencies.form_urlencoded]
version = "1.2.2"
features = [ "alloc",]
default-features = false

[dependencies.idna]
version = "1.1.0"
features = [ "alloc", "compiled_data",]
default-features = false

[dependencies.percent-encoding]
version = "2.3.2"
features = [ "alloc",]
default-features = false

[dependencies.serde]
version = "1.0"
features = [ "derive",]
optional = true
default-features = false

[dev-dependencies.bencher]
version = "0.1"

[dev-dependencies.serde]
version = "1.0"
features = [ "derive",]

[dev-dependencies.serde_json]
version = "1.0"

[package.metadata.playground]
features = [ "serde",]

[package.metadata.docs.rs]
features = [ "serde",]
rustdoc-args = [ "--generate-link-to-definition",]

[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dev-dependencies.wasm-bindgen-test]
version = "0.3"
