[package]
edition = "2018"
rust-version = "1.36"
name = "supply-chain-trust-example-crate-000071"
version = "0.3.31"
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "The core traits and types in for the `futures` library.\n"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [ "Anonymous",]

[lib]
name = "futures_core"
path = "src/lib.rs"

[dev-dependencies]

[features]
alloc = []
cfg-target-has-atomic = []
default = [ "std",]
std = [ "alloc",]
unstable = []

[dependencies.portable-atomic]
version = "1.3"
features = [ "require-cas",]
optional = true
default-features = false

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = [ "cfg(futures_sanitizer)",]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs",]
