[package]
edition = "2018"
rust-version = "1.56"
name = "supply-chain-trust-example-crate-000074"
version = "0.3.31"
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Tools for working with tasks.\n"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [ "Anonymous",]

[lib]
name = "futures_task"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[features]
alloc = []
cfg-target-has-atomic = []
default = [ "std",]
std = [ "alloc",]
unstable = []

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = [ "cfg(futures_sanitizer)",]

[package.metadata.docs.rs]
all-features = true
