[[test]]
name = "dispatch"
path = "tests/dispatch.rs"

[[test]]
name = "global_dispatch"
path = "tests/global_dispatch.rs"

[[test]]
name = "local_dispatch_before_init"
path = "tests/local_dispatch_before_init.rs"

[[test]]
name = "macros"
path = "tests/macros.rs"

[[test]]
name = "missed_register_callsite"
path = "tests/missed_register_callsite.rs"

[package]
edition = "2018"
rust-version = "1.65.0"
name = "supply-chain-trust-example-crate-000086"
version = "0.1.34"
authors = [ "Anonymous",]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Core primitives for application-level tracing.\n"
readme = "README.md"
keywords = [ "logging", "tracing", "profiling",]
categories = [ "development-tools::debugging", "development-tools::profiling", "asynchronous",]
license = "MIT"
resolver = "2"

[features]
default = [ "std", "valuable?/std",]
std = [ "once_cell",]

[lib]
name = "tracing_core"
path = "src/lib.rs"

[badges.maintenance]
status = "actively-developed"

[dependencies.once_cell]
version = "1.13.0"
optional = true

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = [ "cfg(flaky_tests)", "cfg(tracing_unstable)", "cfg(unsound_local_offset)",]

[package.metadata.docs.rs]
all-features = true
rustc-args = [ "--cfg", "tracing_unstable",]
rustdoc-args = [ "--cfg", "docsrs", "--cfg", "tracing_unstable",]

[target."cfg(tracing_unstable)".dependencies.valuable]
version = "0.1.0"
optional = true
default-features = false
